--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="nav__item"><a href="#about" class="nav__link">A propos</a></li>
                 <li class="nav__item"><a href="#skills" class="nav__link">Competences</a></li>
                 <li class="nav__item"><a href="#work" class="nav__link">Experiences</a></li>
-                <li class="nav__item"><a href="#education" class="nav__link">Education</a></li>
+                <li class="nav__item"><a href="#education" class="nav__link">Educations</a></li>
                 <li class="nav__item"><a href="#contact" class="nav__link">Contacts</a></li>
             </ul>
         </div>
@@ -55,7 +55,7 @@
         <a href="https://github.com/MarcEmmanuel01" class="home__social-icon"><i class='bx bxl-github' ></i></a>
     </div>
     <section class="about section" id="about">
-        <h2 class="section-title">A propos de moi</h2>
+        <h2 class="section-title">A propos de  moi</h2>
     
         <div class="about__container bd-grid">
             <div class="about__img">
@@ -233,15 +233,17 @@
 </section>
 
 
-        <!--===== FOOTER =====-->
-        <footer class="footer">
-            <p class="footer__title">Marc Emmanuel</p>
-            <div class="footer__social">
-                <a href="https://www.facebook.com/profile.php?id=100072139106288" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="https://www.instagram.com/iam_marc.emm?igsh=N2Rxd2JhZ2o3MGFm&utm_source=qr" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="https://x.com/marcemm07?s=11" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
-            </div>
-        </footer>
+<!--===== FOOTER =====-->
+<footer class="footer">
+    <p class="footer__title">Marc Emmanuel</p>
+    <div class="footer__social">
+        <a href="https://www.facebook.com/profile.php?id=100072139106288" class="footer__icon" target="_blank"><i class='bx bxl-facebook'></i></a>
+        <a href="https://www.instagram.com/iam_marc.emm?igsh=N2Rxd2JhZ2o3MGFm&utm_source=qr" class="footer__icon" target="_blank"><i class='bx bxl-instagram'></i></a>
+        <a href="https://x.com/marcemm07?s=11" class="footer__icon" target="_blank"><i class='bx bxl-twitter'></i></a>
+    </div>
+    <p class="footer__copy">&copy; 2024 Marc Emmanuel. Tous droits réservés.</p>
+</footer>
+
 
 
         <!--===== SCROLL REVEAL =====-->
