--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <h3 class="experience__title">Ingénieur en Données - Salam Assurance</h3>
                         <span class="experience__subtitle">Juin 2024 - Présent</span>
                         <p class="experience__description">
-                            En tant qu'ingénieur en données chez Salam Assurance, j'ai travaillé sur l'intégration et la gestion de grandes quantités de données pour améliorer la prise de décision au sein de l'entreprise. Mes responsabilités comprenaient la conception et la mise en œuvre d'architectures de données robustes, l'optimisation des processus ETL, et la création de rapports analytiques.
+                            En tant qu'ingénieur en données chez Sanlam Assurance, j'ai travaillé sur l'intégration et la gestion de grandes quantités de données pour améliorer la prise de décision au sein de l'entreprise. Mes responsabilités comprenaient la conception et la mise en œuvre d'architectures de données robustes, l'optimisation des processus ETL, et la création de rapports analytiques.
                         </p>
                     </div>
                     <div class="experience__content">
@@ -227,7 +227,7 @@
             <input type="text" placeholder="Nom" class="contact__input" required>
             <input type="email" placeholder="Email" class="contact__input" required>
             <textarea placeholder="Message" class="contact__input" rows="10" required></textarea>
-            <input type="submit" value="Envoyer" class="contact__button button">
+            <input type="submit" value="Envoyer" class="contact__button button ">
         </form>
     </div>
 </section>
@@ -241,7 +241,7 @@
         <a href="https://www.instagram.com/iam_marc.emm?igsh=N2Rxd2JhZ2o3MGFm&utm_source=qr" class="footer__icon" target="_blank"><i class='bx bxl-instagram'></i></a>
         <a href="https://x.com/marcemm07?s=11" class="footer__icon" target="_blank"><i class='bx bxl-twitter'></i></a>
     </div>
-    <p class="footer__copy">&copy; 2024 Marc Emmanuel. Tous droits réservés.</p>
+    <p class="footer__copy">&copy; 2024 Marc Emmanuel.</p>
 </footer>
 
 
