--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="l-header">
     <nav class="nav bd-grid">
         <div class="nav__logo-container">
-            <img src="assets/img/marc.png" alt="Logo" class="nav__logo-img">
+            <img src="assets/img/marc.png" alt="Logo de Marc" class="nav__logo-img">
             <a href="#" class="nav__logo">Marc Emmanuel</a>
         </div>
 
@@ -44,7 +44,7 @@
 <section class="home bd-grid" id="home">
     <div class="home__content">
         <div class="home__image">
-            <img src="assets/img/marc.png" alt="Image de Marc Emmanuel" class="home__img">
+            <img src="assets/img/marc.png" alt="Logo de Marc Emmanuel" class="home__img">
         </div>
         <div class="home__data">
             <h1 class="home__title">Bienvenue,<br>Je suis <span class="home__title-color">Marc Emmanuel</span><br> étudiant en DATA</h1>
@@ -60,7 +60,7 @@
     
         <div class="about__container bd-grid">
             <div class="about__img">
-                <img src="assets/img/marc.jpeg" alt="">
+                <img src="assets/img/MARC_N.jpg" alt="photo de Marc">
             </div>
     
             <div>
@@ -165,7 +165,7 @@
                 <h2 class="section-title">Expériences</h2>
                 <div class="experience__container bd-grid">
                     <div class="experience__content">
-                        <h3 class="experience__title">Ingénieur en Données - Salam Assurance</h3>
+                        <h3 class="experience__title">Ingénieur en Données - Sanlam Assurance</h3>
                         <span class="experience__subtitle">Juin 2024 - Présent</span>
                         <p class="experience__description">
                             En tant qu'ingénieur en données chez Sanlam Assurance, j'ai travaillé sur l'intégration et la gestion de grandes quantités de données pour améliorer la prise de décision au sein de l'entreprise. Mes responsabilités comprenaient la conception et la mise en œuvre d'architectures de données robustes, l'optimisation des processus ETL, et la création de rapports analytiques.
