--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
                 <h2 class="section-title">Expériences</h2>
                 <div class="experience__container bd-grid">
                     <div class="experience__content">
-                        <h3 class="experience__title">Ingénieur en Données - Sanlam Assurance</h3>
+                        <h3 class="experience__title">Ingénieur de Données - Sanlam Assurance</h3>
                         <span class="experience__subtitle">Juin 2024 - Présent</span>
                         <p class="experience__description">
-                            En tant qu'ingénieur en données chez Sanlam Assurance, j'ai travaillé sur l'intégration et la gestion de grandes quantités de données pour améliorer la prise de décision au sein de l'entreprise. Mes responsabilités comprenaient la conception et la mise en œuvre d'architectures de données robustes, l'optimisation des processus ETL, et la création de rapports analytiques.
+                            En tant qu'ingénieur de données chez Sanlam Assurance, j'ai travaillé sur l'intégration et la gestion de grandes quantités de données pour améliorer la prise de décision au sein de l'entreprise. Mes responsabilités comprenaient la conception et la mise en œuvre d'architectures de données robustes, l'optimisation des processus ETL, et la création de rapports analytiques.
                         </p>
                     </div>
                     <div class="experience__content">
