--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img src="assets/img/marc.png" alt="Logo de Marc Emmanuel" class="home__img">
         </div>
         <div class="home__data">
-            <h1 class="home__title">Bienvenue,<br>Je suis <span class="home__title-color">Marc Emmanuel</span><br> étudiant en DATA</h1>
+            <h1 class="home__title">Bienvenue,<br>Je suis <span class="home__title-color">Marc Emmanuel</span><br> ingénieur en DATA</h1>
             <a href="#contact" class="button">Contact</a>
         </div>
     </div>
