--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
         <div class="about__container bd-grid">
             <div class="about__img">
-                <img src="assets/img/MARC_NEW.jpeg" alt="photo de Marc">
+                <img src="assets/img/MEE.jpeg" alt="photo de Marc">
             </div>
     
             <div>
