--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
     
         <div class="about__container bd-grid">
             <div class="about__img">
-                <img src="assets/img/MEE.jpeg" alt="photo de Marc">
+                <img src="assets/img/MEEE.jpeg" alt="photo de Marc">
             </div>
     
             <div>
                 <p class="about__text">
                     Marc Emmanuel est étudiant ingénieur en Big Data et Intelligence artificielle à ESTIA. Ses domaines de recherche incluent la science de données, les statistiques et la programmation. Il est passionné de lecture, de football, et de mangas.
                 </p>
-                <a href="assets/CV_Marc_Emmanuel.pdf" class="button" download>Télécharger CV</a>
+                <a href="assets/img/CV.pdf" class="button" download>Télécharger CV</a>
             </div>
         </div>
     </section>
