--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
             <div>
                 <p class="about__text">
-                    Marc Emmanuel is a Big Data and Artificial Intelligence engineering student ESATIC and ESTIA. His research areas include data science, statistics, and programming. He is passionate about reading, football, and chess.
+                    Marc Emmanuel is a Big Data and Artificial Intelligence engineering student ESATIC and ESTIA. His research areas include data science, statistics, and programming. He is passionate about reading, football, and chess.</p>
                 <a href="assets/img/CV_Kassi_Marc.pdf" class="button" download>Download CV</a>
             </div>
         </div>
@@ -153,7 +153,7 @@
             <div class="competences__icon">
                 <img src="assets/img/analyse finance.png" alt="Analyst financier"> 
             </div>
-            <h3 class="competences__title">Data Science</h3>
+            <h3 class="competences__title">Data Scientist</h3>
             <p class="competences__description">Using data analysis and machine learning to uncover insights and predict trends.</p>
         </div>
 
