--- a/index.html
+++ b/index.html
@@ -126,9 +126,6 @@
     </div>
 
 
-
-
-
     <h2 class="section-title">Skills</h2>
 
     <div class="competences__container bd-grid">
@@ -173,17 +170,17 @@
                 <h2 class="section-title">Work</h2>
                 <div class="experience__container bd-grid">
                     <div class="experience__content">
-                        <h3 class="experience__title">Data Engineer - Sanlam Allianz Assurance</h3>
+                        <h3 class="experience__title">Data Engineer - Angyl & Associes</h3>
                         <span class="experience__subtitle">July 2024 - Present</span>
                         <p class="experience__description">
-                            As a Data Engineer at Sanlam Allianz Assurance, I worked on integrating and managing large volumes of data to enhance the company’s decision-making processes. My responsibilities included designing and implementing robust data architectures, optimizing ETL processes, and creating analytical reports.
+                            As a Data Engineer at Angyl & Associes, I worked on integrating and managing large volumes of data to enhance the company’s decision-making processes. My responsibilities included designing and implementing robust data architectures, optimizing ETL processes, and creating analytical reports.
                     </div>
 
                     <div class="experience__content">
-                        <h3 class="experience__title">Data Analyst - Sanlam Allianz Assurance</h3>
+                        <h3 class="experience__title">Data Analyst - Angyl & Associes</h3>
                         <span class="experience__subtitle">July 2024 - Present</span>
                         <p class="experience__description">
-                            As a Data Analyst at Sanlam Allianz Assurance, I analyze and interpret data to support business decision-making. My role involves data cleaning, building dashboards, conducting trend analysis, and collaborating with teams to optimize processes and improve strategic insights.
+                            As a Data Analyst at Angyl & Associes, I analyze and interpret data to support business decision-making. My role involves data cleaning, building dashboards, conducting trend analysis, and collaborating with teams to optimize processes and improve strategic insights.
                     </div>
                 
                     <div class="experience__content">
