--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     
         <div class="about__container bd-grid">
             <div class="about__img">
-                <img src="assets/img/MEEE.jpeg" alt="photo de Marc">
+                <img src="assets/img/kassi2.jpeg" alt="photo de Marc">
             </div>
     
             <div>
                 <p class="about__text">
                     Marc Emmanuel is a Big Data and Artificial Intelligence engineering student ESATIC and ESTIA. His research areas include data science, statistics, and programming. He is passionate about reading, football, and chess.</p>
-                <a href="assets/img/CV_Kassi_Marc.pdf" class="button" download>Download CV</a>
+                <a href="assets/img/cv_kassi.pdf" class="button" download>Download CV</a>
             </div>
         </div>
     </section>
